define if a touche is present during the match

--- a/src/index.html
+++ b/src/index.html
@@ -82,6 +82,7 @@
                 <tr>
                     <th>Touches</th>
                     <td>Points</td>
+                    <td>Dispo en match</td>
                     <td>Dispo en mort subite</td>
                     <td>Dispo en prolongation</td>
                 </tr>
